--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.investmentkorea.android.admin"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 1
-        versionName "1.0.0"
+        versionCode 2
+        versionName "1.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -16,7 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             android.applicationVariants.all { variant ->
                 variant.outputs.all {
-                    outputFileName = "${variant.name}-${"StockSaying_" + variant.versionName}.apk"
+                    outputFileName = "${variant.name}-${"StockSayingAdmin_" + variant.versionName}.apk"
                 }
             }
         }
